--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <!-- include('../partials/head') %-->
-  <body>
-    <div id="wrapper">
-      <!-- include('../partials/header') %-->
-      <!-- include('../partials/navigation') %-->
-      <main>
-        <!-- body %-->
-      </main>
-      <div>
-        <!-- include('../partials/footer') %-->
-      </div>
-    </div>
-  </body>
-</html>
+<header id="top-header">
+  <span class="siteName">
+    <a href="/" title="Return to home page">CSE Motors</a>
+  </span>
+  <div id="tools">
+    <a title="Click to log in" href="/account/login">My Account</a>
+  </div>
+</header>
