--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>Custom</li>
-    <li>Sedan</li>
-    <li>SUV</li>
-    <li>Truck</li>
-  </ul>
-</nav>
+<nav role="navigation">
+    <ul>
+      <li><a href="/home" title="View the CSE Motors home page">Home</a></li>
+      <li><a href="/custom" title="Explore custom vehicles">Custom</a></li>
+      <li><a href="/sedan" title="Browse sedan models">Sedan</a></li>
+      <li><a href="/suv" title="Browse SUV models">SUV</a></li>
+      <li><a href="/truck" title="Browse truck models">Truck</a></li>
+    </ul>
+  </nav>
