--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<% const d = new Date()
-let year = d.getFullYear() %>
-<footer>
-  <p class="copyright">& copy ; <%= year %>, CSE 340 App</p>
-</footer>
+<% const d = new Date() %>
+  <% let year = d.getFullYear() %>
+  <footer role="contentinfo">
+    <p class="copyright">Letlotlo Hlaoli &copy; <%= year %> CSE 340 App</p>
+  </footer>
