--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,19 @@
-<header id="top-header">
-  <span class="siteName">
-    <a href="/" title="Return to home page">CSE Motors</a>
-  </span>
-  <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
-  </div>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSE Motors</title>
+  <link rel="stylesheet" href="/public/css/styles.css" media="screen">
+</head>
+<body>
+  <header id="top-header" role="banner">
+    <h1 class="siteName">
+      <a href="/" title="Return to CSE Motors home page">CSE Motors</a>
+    </h1>
+    <div id="tools">
+      <a title="Log in to your CSE Motors account" href="/account/login">My Account</a>
+    </div>
+  </header>
+</body>
+</html>
