--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSE Motors</title>
-  <link rel="stylesheet" href="/public/css/styles.css" media="screen">
+  <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body>
   <header id="top-header" role="banner">
