--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,8 @@
         </p>
         <button class="own-button">Own Today</button>
       </div>
-    </div>
+    </div><h3>DeLorean Upgrades</h3>
     <div class="upgrades-section">
-        <h3>DeLorean Upgrades</h3>
         <div class="upgrades-grid">
           <div class="upgrade">
             <picture>
@@ -58,5 +57,5 @@
           <li>★ "80’s livin and love it!" (5/5)</li>
         </ul>
       </div>
-    </section>
+    </div>
   </main>
