validate html and css

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,4 +1,4 @@
-<nav role="navigation">
+<nav>
     <ul>
       <li><a href="/home" title="View the CSE Motors home page">Home</a></li>
       <li><a href="/custom" title="Explore custom vehicles">Custom</a></li>
@@ -6,4 +6,4 @@
       <li><a href="/suv" title="Browse SUV models">SUV</a></li>
       <li><a href="/truck" title="Browse truck models">Truck</a></li>
     </ul>
-  </nav>
+</nav>
