--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSE Motors</title>
-  <link rel="stylesheet" href="/public/css/styles.css">
-</head>
-<body>
-  <header id="top-header" role="banner">
+
+  <header id="top-header">
     <h1 class="siteName">
       <a href="/" title="Return to CSE Motors home page">CSE Motors</a>
     </h1>
@@ -15,5 +7,4 @@
       <a title="Log in to your CSE Motors account" href="/account/login">My Account</a>
     </div>
   </header>
-</body>
-</html>
+
