--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,6 @@
 <main>
+  <h1>Welcome to CSE Motors!</h1>
     <div class="delorean-container">
-      <h1>Welcome to CSE Motors!</h1>
-      <picture>
-        <source srcset="/images/vehicles/delorean-tn.jpg" media="(max-width: 300px)">
-        <img src="/images/vehicles/delorean.jpg" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/vehicles/placeholder.jpg'; console.log('Image failed to load:', this.src);">
-      </picture>
       <div class="delorean-info">
         <h2>DMC DeLorean</h2>
         <p>
@@ -14,7 +10,12 @@
         </p>
         <button class="own-button">Own Today</button>
       </div>
-    </div><h3>DeLorean Upgrades</h3>
+      <picture>
+        <source srcset="/images/vehicles/delorean-tn.jpg" media="(max-width: 300px)">
+        <img src="/images/vehicles/delorean.jpg" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/vehicles/placeholder.jpg'; console.log('Image failed to load:', this.src);">
+      </picture>
+    </div>
+    <h3>DeLorean Upgrades</h3>
     <div class="upgrades-section">
         <div class="upgrades-grid">
           <div class="upgrade">
