--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
           <div class="upgrade">
             <picture>
               <source srcset="/images/upgrades/flux-cap.png" media="(max-width: 300px)">
-              <img src="/images/upgrades/flux-cap.png" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
+              <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
             </picture>
             <!-- <div class="upgrade"><img src="/images/flux-capacitor.jpg" alt="Flux Capacitor upgrade" onerror="this.src='/images/placeholder.jpg'; console.log('Image failed to load:', this.src);"><p>Flux Capacitor</p></div> -->
             <p>Flux Capacitor</p>
@@ -29,21 +29,21 @@
           <div class="upgrade">
             <picture>
               <source srcset="/images/upgrades/flame.jpg" media="(max-width: 300px)">
-              <img src="/images/upgrades/flame.jpg" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
+              <img src="/images/upgrades/flame.jpg" alt="Flame Decals" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
             </picture>
             <p>Flame Decals</p>
           </div>
           <div class="upgrade">
             <picture>
               <source srcset="/images/upgrades/bumper.jpg" media="(max-width: 300px)">
-              <img src="/images/upgrades/bumper.jpg" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
+              <img src="/images/upgrades/bumper.jpg" alt="Bumper Stickers" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
             </picture>
             <p>Bumper Stickers</p>
           </div>
           <div class="upgrade">
             <picture>
               <source srcset="/images/upgrades/hub-cap.jpg" media="(max-width: 300px)">
-              <img src="/images/upgrades/hub-cap.jpg" alt="DeLorean DMC-12 car with futuristic design" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
+              <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" onerror="this.src='/images/upgrades/placeholder.jpg'; console.log('Image failed to load:', this.src);">
             </picture>
           <p>Hub Caps</p>
           </div>
