add dynamic nav

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-      <li><a href="/home" title="View the CSE Motors home page">Home</a></li>
+      <li><a href="/" title="View the CSE Motors home page">Home</a></li>
       <li><a href="/custom" title="Explore custom vehicles">Custom</a></li>
       <li><a href="/sedan" title="Browse sedan models">Sedan</a></li>
       <li><a href="/suv" title="Browse SUV models">SUV</a></li>
