create branch week3b

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
-    <ul>
-      <li><a href="/" title="View the CSE Motors home page">Home</a></li>
-      <li><a href="/custom" title="Explore custom vehicles">Custom</a></li>
-      <li><a href="/sedan" title="Browse sedan models">Sedan</a></li>
-      <li><a href="/suv" title="Browse SUV models">SUV</a></li>
-      <li><a href="/truck" title="Browse truck models">Truck</a></li>
-    </ul>
+  <ul>
+    <li><a href="/" title="View the CSE Motors home page">Home</a></li>
+    <li><a href="/inventory/type/custom" title="Explore custom vehicles">Custom</a></li>
+    <li><a href="/inventory/type/sedan" title="Browse sedan models">Sedan</a></li>
+    <li><a href="/inventory/type/suv" title="Browse SUV models">SUV</a></li>
+    <li><a href="/inventory/type/truck" title="Browse truck models">Truck</a></li>
+  </ul>
 </nav>
