--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav>
-    <ul>
-      <li><a href="/" title="View the CSE Motors home page">Home</a></li>
-      <li><a href="/custom" title="Explore custom vehicles">Custom</a></li>
-      <li><a href="/sedan" title="Browse sedan models">Sedan</a></li>
-      <li><a href="/suv" title="Browse SUV models">SUV</a></li>
-      <li><a href="/truck" title="Browse truck models">Truck</a></li>
-    </ul>
+   <%- nav %>
 </nav>
