--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,13 @@
-<nav>
-   <%- nav %>
+<nav class="navbar">
+  <!-- Hamburger Icon (visible on small screens) -->
+  <button class="hamburger" aria-label="Toggle navigation">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
+  <!-- Navigation Links (collapsible on small screens) -->
+  <div class="nav-links">
+    <%- nav %>
+  </div>
 </nav>
