implement intentional error

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,4 +2,5 @@
   <% let year = d.getFullYear() %>
   <footer>
     <p class="copyright">Letlotlo Hlaoli &copy; <%= year %> CSE 340 App</p>
+    <a href="/trigger-error">Trigger</a>
   </footer>
