--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -329,6 +329,9 @@ footer {
   font-size: clamp(0.8rem, 3vw, 1rem);
   width: 100%;
 }
+footer a {
+color: #fff;
+}
 
 /* ===== Responsive Breakpoints ===== */
 @media (max-width: 768px) {
