--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <main>
   <h1>Welcome to CSE Motors!</h1>
+  <%- messages() %>
     <div class="delorean-container">
       <div class="delorean-info">
         <h2>DMC DeLorean</h2>
