--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
       <a href="/" title="Return to CSE Motors home page">CSE Motors</a>
     </h1>
     <div id="tools">
-      <a title="Log in to your CSE Motors account" href="/account/login">My Account</a>
+      <a title="Log in to your CSE Motors account" href="/accounts/login">My Account</a>
     </div>
   </header>
 
