post reg to database

--- a/views/accounts/register.ejs
+++ b/views/accounts/register.ejs
@@ -2,7 +2,7 @@
   <% if (message) { %>
     <p class="notice"><%= message %></p>
   <% } %>
-  <form action="/account/register" method="POST" class="register-form">
+  <form action="/accounts/register" method="POST" class="register-form">
     <label for="account_firstname">First Name</label>
     <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname || '' %>" aria-label="Enter your first name">
     <label for="account_lastname">Last Name</label>
