--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -3,10 +3,10 @@
     <p class="notice"><%= message %></p>
   <% } %>
   <form action="/accounts/login" method="POST" class="login-form">
-    <label for="email">Email Address</label>
-    <input type="email" id="email" name="email" required aria-label="Enter your email address">
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required aria-label="Enter your password">
+    <label for="account_email">Email Address</label>
+    <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email || '' %>" aria-label="Enter your email address">
+    <label for="account_password">Password</label>
+    <input type="password" id="account_password" name="account_password" required value="<%= locals.account_password || '' %>" aria-label="Enter your password">
     <button type="submit" class="login-button">Log In</button>
   </form>
   <p class="register-link">
