--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -6,7 +6,7 @@
     <label for="account_email">Email Address</label>
     <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email || '' %>" aria-label="Enter your email address">
     <label for="account_password">Password</label>
-    <input type="password" id="account_password" name="account_password" required value="<%= locals.account_password || '' %>" aria-label="Enter your password">
+    <input type="password" id="account_password" name="account_password" required pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{12,}$" title="Password must be at least 12 characters, contain at least 1 capital letter, 1 number, and 1 special character (!@#$%^&*)" value="<%= locals.account_password || '' %>" aria-label="Enter your password">
     <button type="submit" class="login-button">Log In</button>
   </form>
   <p class="register-link">
