--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -1,7 +1,11 @@
+<% if (title) { %>
 <h1><%= title %></h1>
-  <% if (message) { %>
-    <p class="notice"><%= message %></p>
-  <% } %>
+<% } else {
+  res.redirect('/')
+} %>
+
+    <%- message %>
+ 
   <form action="/accounts/login" method="POST" class="login-form">
     <label for="account_email">Email Address</label>
     <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email || '' %>" aria-label="Enter your email address">
