--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -5,6 +5,14 @@
 } %>
 
     <%- message %>
+  
+    <% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
  
   <form action="/accounts/login" method="POST" class="login-form">
     <label for="account_email">Email Address</label>
